--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@
       <section class="features">
         <div class="container">
           <h2 hidden>our features</h2>
+          <ul class="hero-icons">
+            <li class="hero-icons-list"> <svg class="hero-icon" width="59.72px" height="64px">
+              <use href="./images/icons.svg#icon-antenna-1"></use>
+            </svg></li>
+            <li class="hero-icons-list"> <svg class="hero-icon" width="61.22px" height="64px">
+              <use href="./images/icons.svg#icon-clock-1"></use>
+            </svg></li>
+            <li class="hero-icons-list"> <svg class="hero-icon" width="64px" height="49.09px">
+              <use href="./images/icons.svg#icon-diagram-1"></use>
+            </svg></li>
+            <li class="hero-icons-list"> <svg class="hero-icon" width="50.13px" height="55.46px">
+              <use href="./images/icons.svg#icon-astronaut-1"></use>
+            </svg></li>
+          </ul>
           <!--Feature 1-->
           <ul class="features-list">
             <li class="features-item">
@@ -146,6 +160,20 @@
               <div class="ourteam-text">
                 <h3 class="subtitle">Mark Guerrero</h3>
                 <p class="main-text">Product Designer</p>
+                <a class="social-link" href aria-label="Instagram-link">
+                  <svg class="social-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                  <svg class="social-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                  <svg class="social-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                  <svg class="social-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li class="ourteam-list">
@@ -157,6 +185,20 @@
               <div class="ourteam-text">
                 <h3 class="subtitle">Tom Ford</h3>
                 <p class="main-text">Frontend Developer</p>
+                <a class="social-link" href aria-label="Instagram-link">
+                  <svg class="social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                  <svg class="social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                  <svg class="social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                  <svg class="social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li class="ourteam-list">
@@ -168,6 +210,20 @@
               <div class="ourteam-text">
                 <h3 class="subtitle">Camila Garcia</h3>
                 <p class="main-text">Marketing</p>
+                <a class="social-link" href aria-label="Instagram-link">
+                  <svg class="social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                  <svg class="social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                  <svg class="social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                  <svg class="social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li class="ourteam-list">
@@ -179,6 +235,20 @@
               <div class="ourteam-text">
                 <h3 class="subtitle">Daniel Wilson</h3>
                 <p class="main-text">UI Designer</p>
+                <a class="social-link" href aria-label="Instagram-link">
+                  <svg class="social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                  <svg class="social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                  <svg class="social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                  <svg class="social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </div>
             </li>
           </ul>
