--- a/index.html
+++ b/index.html
@@ -160,22 +160,38 @@
               <div class="ourteam-text">
                 <h3 class="subtitle">Mark Guerrero</h3>
                 <p class="main-text">Product Designer</p>
-                <a class="social-link" href aria-label="Instagram-link">
+                <ul class="socials">
+                  <li class="social-item">            
+                <a class="social-link" href="https://instagram.com" rel="noopener noreferrer" aria-label="Instagram-link">
                   <svg class="social-icon" width="16px" height="16px">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
-                  <svg class="social-icon" width="16px" height="16px">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                  <svg class="social-icon" width="16px" height="16px">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                  <svg class="social-icon" width="16px" height="16px">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
                 </a>
+                </li>
+                <li class="social-item">            
+                  <a class="social-link" href="https://twitter.com" rel="noopener noreferrer" aria-label="Twitter-link">
+                    <svg class="social-icon" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  </li>
+                  <li class="social-item">            
+                    <a class="social-link" href="https://facebook.com" rel="noopener noreferrer" aria-label="Twitter-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                    </li>
+                    <li class="social-item">            
+                      <a class="social-link" href="https://linkedin.com" rel="noopener noreferrer" aria-label="Twitter-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                      </li>            
+            </ul>
               </div>
-            </li>
+            
             <li class="ourteam-list">
               <img
                 class="ourimages"
@@ -185,20 +201,36 @@
               <div class="ourteam-text">
                 <h3 class="subtitle">Tom Ford</h3>
                 <p class="main-text">Frontend Developer</p>
-                <a class="social-link" href aria-label="Instagram-link">
-                  <svg class="social-icon" width="16" height="16">
+                <ul class="socials">
+                  <li class="social-item">            
+                <a class="social-link" href="https://instagram.com" rel="noopener noreferrer" aria-label="Instagram-link">
+                  <svg class="social-icon" width="16px" height="16px">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
-                  <svg class="social-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                  <svg class="social-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                  <svg class="social-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
                 </a>
+                </li>
+                <li class="social-item">            
+                  <a class="social-link" href="https://twitter.com" rel="noopener noreferrer" aria-label="Twitter-link">
+                    <svg class="social-icon" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  </li>
+                  <li class="social-item">            
+                    <a class="social-link" href="https://facebook.com" rel="noopener noreferrer" aria-label="Twitter-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                    </li>
+                    <li class="social-item">            
+                      <a class="social-link" href="https://linkedin.com" rel="noopener noreferrer" aria-label="Twitter-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                      </li>            
+            </ul>                
               </div>
             </li>
             <li class="ourteam-list">
@@ -210,20 +242,36 @@
               <div class="ourteam-text">
                 <h3 class="subtitle">Camila Garcia</h3>
                 <p class="main-text">Marketing</p>
-                <a class="social-link" href aria-label="Instagram-link">
-                  <svg class="social-icon" width="16" height="16">
+                <ul class="socials">
+                  <li class="social-item">            
+                <a class="social-link" href="https://instagram.com" rel="noopener noreferrer" aria-label="Instagram-link">
+                  <svg class="social-icon" width="16px" height="16px">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
-                  <svg class="social-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                  <svg class="social-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                  <svg class="social-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
                 </a>
+                </li>
+                <li class="social-item">            
+                  <a class="social-link" href="https://twitter.com" rel="noopener noreferrer" aria-label="Twitter-link">
+                    <svg class="social-icon" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  </li>
+                  <li class="social-item">            
+                    <a class="social-link" href="https://facebook.com" rel="noopener noreferrer" aria-label="Twitter-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                    </li>
+                    <li class="social-item">            
+                      <a class="social-link" href="https://linkedin.com" rel="noopener noreferrer" aria-label="Twitter-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                      </li>            
+            </ul>                
               </div>
             </li>
             <li class="ourteam-list">
@@ -235,24 +283,67 @@
               <div class="ourteam-text">
                 <h3 class="subtitle">Daniel Wilson</h3>
                 <p class="main-text">UI Designer</p>
-                <a class="social-link" href aria-label="Instagram-link">
-                  <svg class="social-icon" width="16" height="16">
+                <ul class="socials">
+                  <li class="social-item">            
+                <a class="social-link" href="https://instagram.com" rel="noopener noreferrer" aria-label="Instagram-link">
+                  <svg class="social-icon" width="16px" height="16px">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
-                  <svg class="social-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                  <svg class="social-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                  <svg class="social-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
                 </a>
+                </li>
+                <li class="social-item">            
+                  <a class="social-link" href="https://twitter.com" rel="noopener noreferrer" aria-label="Twitter-link">
+                    <svg class="social-icon" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  </li>
+                  <li class="social-item">            
+                    <a class="social-link" href="https://facebook.com" rel="noopener noreferrer" aria-label="Twitter-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                    </li>
+                    <li class="social-item">            
+                      <a class="social-link" href="https://linkedin.com" rel="noopener noreferrer" aria-label="Twitter-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                      </li>            
+            </ul>                
               </div>
             </li>
           </ul>
         </div>
+      </section>
+      <!--Section 4 Customers-->
+      <section class="customers">
+      <div class="container">
+        <h2>Customers</h2>
+        <ul class="customers-icons">
+          <li class="customers-icons-list"> <svg class="customers-icon" width="104px" height="56px">
+            <use href="./images/icons.svg#icon-yaco1"></use>
+          </svg></li>
+          <li class="customers-icons-list"> <svg class="customers-icon" width="104px" height="56px">
+            <use href="./images/icons.svg#icon-tagline2"></use>
+          </svg></li>
+          <li class="customers-icons-list"> <svg class="customers-icon" width="104px" height="56px">
+            <use href="./images/icons.svg#icon-company3"></use>
+          </svg></li>
+          <li class="customers-icons-list"> <svg class="customers-icon" width="104px" height="56px">
+            <use href="./images/icons.svg#icon-fosterpeters4"></use>
+          </svg></li>
+          <li class="customers-icons-list"> <svg class="customers-icon" width="104px" height="56px">
+            <use href="./images/icons.svg#icon-brand5"></use>
+          </svg></li>
+          <li class="customers-icons-list"> <svg class="customers-icon" width="104px" height="56px">
+            <use href="./images/icons.svg#icon-tagline6"></use>
+          </svg></li>
+          
+        </ul>
+      </div>
       </section>
     </main>
     <!--Footer section-->
@@ -265,6 +356,36 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        <ul class="social-media">
+          <li class="social-item">            
+        <a class="social-media-link" href="https://instagram.com" rel="noopener noreferrer" aria-label="Instagram-link">
+          <svg class="social-media-icon" width="16px" height="16px">
+            <use href="./images/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
+        </li>
+        <li class="social-media-item">            
+          <a class="social-media-link" href="https://twitter.com" rel="noopener noreferrer" aria-label="Twitter-link">
+            <svg class="social-media-icon" width="16px" height="16px">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+          </li>
+          <li class="social-media-item">            
+            <a class="social-media-link" href="https://facebook.com" rel="noopener noreferrer" aria-label="Twitter-link">
+              <svg class="social-media-icon" width="16px" height="16px">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+            </li>
+            <li class="social-media-item">            
+              <a class="social-media-link" href="https://linkedin.com" rel="noopener noreferrer" aria-label="Twitter-link">
+                <svg class="social-media-icon" width="16px" height="16px">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+              </li>            
+    </ul>
       </div>
     </footer>
   </body>
