--- a/index.html
+++ b/index.html
@@ -356,6 +356,8 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        <div class="footer-media">
+        <p class="footer-soc-media-text">Social media</p>
         <ul class="social-media">
           <li class="social-item">            
         <a class="social-media-link" href="https://instagram.com" rel="noopener noreferrer" aria-label="Instagram-link">
@@ -386,6 +388,7 @@
               </a>
               </li>            
     </ul>
+  </div>
       </div>
     </footer>
   </body>
