--- a/index.html
+++ b/index.html
@@ -348,15 +348,17 @@
     </main>
     <!--Footer section-->
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
+        <div class="footer-left">
         <a class="footer-logo link" href="./index.html"
           >Web<span class="footer-logo-s">Studio</span></a
         >
         <p class="footer-desk">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-        <div class="footer-media">
+          Increase the flow of customers and <br> sales for your business with
+          digital <br> marketing & growth solutions.
+        </p>        
+      </div>
+      <div class="footer-right">
         <p class="footer-soc-media-text">Social media</p>
         <ul class="social-media">
           <li class="social-item">            
@@ -389,7 +391,7 @@
               </li>            
     </ul>
   </div>
-      </div>
+</div>
     </footer>
   </body>
 </html>
