--- a/portfolio.html
+++ b/portfolio.html
@@ -218,15 +218,50 @@
     </main>
     <!--Footer section-->
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
+        <div class="footer-left">
         <a class="footer-logo link" href="./index.html"
           >Web<span class="footer-logo-s">Studio</span></a
         >
         <p class="footer-desk">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+          Increase the flow of customers and <br> sales for your business with
+          digital <br> marketing & growth solutions.
+        </p>        
       </div>
+      <div class="footer-right">
+        <p class="footer-soc-media-text">Social media</p>
+        <ul class="social-media">
+          <li class="social-item">            
+        <a class="social-media-link" href="https://instagram.com" rel="noopener noreferrer" aria-label="Instagram-link">
+          <svg class="social-media-icon" width="16px" height="16px">
+            <use href="./images/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
+        </li>
+        <li class="social-media-item">            
+          <a class="social-media-link" href="https://twitter.com" rel="noopener noreferrer" aria-label="Twitter-link">
+            <svg class="social-media-icon" width="16px" height="16px">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+          </li>
+          <li class="social-media-item">            
+            <a class="social-media-link" href="https://facebook.com" rel="noopener noreferrer" aria-label="Twitter-link">
+              <svg class="social-media-icon" width="16px" height="16px">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+            </li>
+            <li class="social-media-item">            
+              <a class="social-media-link" href="https://linkedin.com" rel="noopener noreferrer" aria-label="Twitter-link">
+                <svg class="social-media-icon" width="16px" height="16px">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+              </li>            
+    </ul>
+  </div>
+</div>
     </footer>
   </body>
 </html>
