--- a/index.html
+++ b/index.html
@@ -63,32 +63,15 @@
       <!--Section 1-->
       <section class="features">
         <div class="container">
-          <h2 hidden>our features</h2>
-          <ul class="hero-icons">
-            <li class="hero-icons-list">
-              <svg class="hero-icon" width="59.72px" height="64px">
-                <use href="./images/icons.svg#icon-antenna-1"></use>
-              </svg>
-            </li>
-            <li class="hero-icons-list">
-              <svg class="hero-icon" width="61.22px" height="64px">
-                <use href="./images/icons.svg#icon-clock-1"></use>
-              </svg>
-            </li>
-            <li class="hero-icons-list">
-              <svg class="hero-icon" width="64px" height="49.09px">
-                <use href="./images/icons.svg#icon-diagram-1"></use>
-              </svg>
-            </li>
-            <li class="hero-icons-list">
-              <svg class="hero-icon" width="50.13px" height="55.46px">
-                <use href="./images/icons.svg#icon-astronaut-1"></use>
-              </svg>
-            </li>
-          </ul>
+          <h2 hidden>our features</h2>          
           <!--Feature 1-->
           <ul class="features-list">
             <li class="features-item">
+              <div class="hero-icons-list">
+                <svg class="hero-icon" width="59.72px" height="64px">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Strategy</h3>
               <p class="main-text">
                 Our goal is to identify the business problem to walk away with
@@ -97,6 +80,11 @@
             </li>
             <!--Feature 2-->
             <li class="features-item">
+              <div class="hero-icons-list">
+                <svg class="hero-icon" width="61.22px" height="64px">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Punctuality</h3>
               <p class="main-text">
                 Bring the key message to the brand's audience for the best price
@@ -105,6 +93,11 @@
             </li>
             <!--Feature 3-->
             <li class="features-item">
+              <div class="hero-icons-list">
+                <svg class="hero-icon" width="64px" height="49.09px">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Diligence</h3>
               <p class="main-text">
                 Research and confirm brands that present the strongest digital
@@ -113,6 +106,11 @@
             </li>
             <!--Feature 4-->
             <li class="features-item">
+              <div class="hero-icons-list">
+                <svg class="hero-icon" width="50.13px" height="55.46px">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Technologies</h3>
               <p class="main-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -410,37 +408,49 @@
       <!--Section 4 Customers-->
       <section class="customers">
         <div class="container">
-          <h2>Customers</h2>
+          <h2 class="customers-title">Customers</h2>
           <ul class="customers-icons">
             <li class="customers-icons-list">
+              <a class="customers-item" href aria-label="#">
               <svg class="customers-icon" width="104px" height="56px">
                 <use href="./images/icons.svg#icon-yaco1"></use>
               </svg>
+            </a>
             </li>
             <li class="customers-icons-list">
+              <a class="customers-item" href aria-label="#">
               <svg class="customers-icon" width="104px" height="56px">
                 <use href="./images/icons.svg#icon-tagline2"></use>
               </svg>
+            </a>
             </li>
             <li class="customers-icons-list">
+              <a class="customers-item" href aria-label="#">
               <svg class="customers-icon" width="104px" height="56px">
                 <use href="./images/icons.svg#icon-company3"></use>
               </svg>
+            </a>
             </li>
             <li class="customers-icons-list">
+              <a class="customers-item" href aria-label="#">
               <svg class="customers-icon" width="104px" height="56px">
                 <use href="./images/icons.svg#icon-fosterpeters4"></use>
               </svg>
+            </a>
             </li>
             <li class="customers-icons-list">
+              <a class="customers-item" href aria-label="#">
               <svg class="customers-icon" width="104px" height="56px">
                 <use href="./images/icons.svg#icon-brand5"></use>
               </svg>
+            </a>
             </li>
             <li class="customers-icons-list">
+              <a class="customers-item" href aria-label="#">
               <svg class="customers-icon" width="104px" height="56px">
                 <use href="./images/icons.svg#icon-tagline6"></use>
               </svg>
+            </a>
             </li>
           </ul>
         </div>
