--- a/portfolio.html
+++ b/portfolio.html
@@ -75,8 +75,8 @@
           </ul>
           <!--Row 1-->
           <ul class="concepts">
-            <li class="concepts-sec">
-              <a class="concepts-sec link" href="Banking_App">
+            <li class="concepts-list">
+              <a class="concepts-item" href="Banking_App">
                 <img
                   class="concepts-img"
                   src="./images/portfolio/row1/project-card-1/img.jpg"
@@ -90,8 +90,8 @@
                 </div></a
               >
             </li>
-            <li class="concepts-sec">
-              <a class="concepts-sec link" href="Cashless_Payment">
+            <li class="concepts-list">
+              <a class="concepts-item" href="Cashless_Payment">
                 <img
                   class="concepts-img"
                   src="./images/portfolio/row1/project-card-2/img.jpg"
@@ -105,8 +105,8 @@
                 </div>
               </a>
             </li>
-            <li class="concepts-sec">
-              <a class="concepts-sec link" href="Meditaion_App">
+            <li class="concepts-list">
+              <a class="concepts-item" href="Meditaion_App">
                 <img
                   class="concepts-img"
                   src="./images/portfolio/row1/project-card-3/img.jpg"
@@ -121,8 +121,8 @@
               </a>
             </li>
             <!--Row 2-->
-            <li class="concepts-sec">
-              <a class="concepts-sec link" href="Taxi_Service">
+            <li class="concepts-list">
+              <a class="concepts-item" href="Taxi_Service">
                 <img
                   class="concepts-img"
                   src="./images/portfolio/row2/project-card-1/img.jpg"
@@ -136,8 +136,8 @@
                 </div>
               </a>
             </li>
-            <li class="concepts-sec">
-              <a class="concepts-sec link" href="Screen_Illustrations">
+            <li class="concepts-list">
+              <a class="concepts-item" href="Screen_Illustrations">
                 <img
                   class="concepts-img"
                   src="./images/portfolio/row2/project-card-2/img.jpg"
@@ -151,8 +151,8 @@
                 </div>
               </a>
             </li>
-            <li class="concepts-sec">
-              <a class="concepts-sec link" href="Online_Courses">
+            <li class="concepts-list">
+              <a class="concepts-item" href="Online_Courses">
                 <img
                   class="concepts-img"
                   src="./images/portfolio/row2/project-card-3/img.jpg"
@@ -167,8 +167,8 @@
               </a>
             </li>
             <!--Row 3-->
-            <li class="concepts-sec">
-              <a class="concepts-sec link" href="Instagram_Stories_Concept">
+            <li class="concepts-list">
+              <a class="concepts-item" href="Instagram_Stories_Concept">
                 <img
                   class="concepts-img"
                   src="./images/portfolio/row3/project-card-1/img.jpg"
@@ -182,8 +182,8 @@
                 </div>
               </a>
             </li>
-            <li class="concepts-sec">
-              <a class="concepts-sec link" href="Organic_Food">
+            <li class="concepts-list">
+              <a class="concepts-item" href="Organic_Food">
                 <img
                   class="concepts-img"
                   src="./images/portfolio/row3/project-card-2/img.jpg"
@@ -197,8 +197,8 @@
                 </div>
               </a>
             </li>
-            <li class="concepts-sec">
-              <a class="concepts-sec link" href="Fresh_Coffee">
+            <li class="concepts-list">
+              <a class="concepts-item" href="Fresh_Coffee">
                 <img
                   class="concepts-img"
                   src="./images/portfolio/row3/project-card-3/img.jpg"
